--- a/assets/testimonials.css
+++ b/assets/testimonials.css
@@ -229,6 +229,8 @@
     padding: 0 32px 0 0;
     margin: 0;
     border-right: 1px solid transparent;
+    position: relative;
+    z-index: 1;
   }
 
   .testimonials__side.testimonials__side--desktop-hidden {
@@ -278,7 +280,7 @@
 
   .testimonials__side:not(.testimonials__side--desktop-hidden) + .carousel {
     padding: 0 40px;
-    width: calc(100% - var(--title-max-width) + var(--horizontal-padding-mobile) + 8px);
+    width: calc(100% - var(--title-max-width) + 24px);
   }
 
   .testimonials__side:not(.testimonials__side--desktop-hidden) + .carousel::before,
@@ -290,6 +292,28 @@
   .testimonials__side:not(.testimonials__side--desktop-hidden) + .carousel::after {
     right: 0;
     left: auto;
+  }
+
+  .testimonials__side:not(.testimonials__side--desktop-hidden) + .carousel .carousel__wrapper {
+    margin: 0 -16px;
+    width: calc(100% + 32px);
+  }
+
+  .testimonials__side:not(.testimonials__side--desktop-hidden) + .carousel .carousel__inner {
+    padding-right: 16px;
+  }
+
+  .testimonials__side:not(.testimonials__side--desktop-hidden) + .carousel .carousel__item:first-child,
+  .testimonials__side:not(.testimonials__side--desktop-hidden) + .carousel .carousel__item:last-child {
+    min-width: var(--slide-width);
+  }
+
+  .testimonials__side:not(.testimonials__side--desktop-hidden) + .carousel .carousel__item:first-child .carousel__inner {
+    padding-left: 16px;
+  }
+
+  .testimonials__side:not(.testimonials__side--desktop-hidden) + .carousel .carousel__item:last-child .carousel__inner {
+    padding-right: 16px;
   }
 
   .testimonials__wrapper .testimonials__side:not(.testimonials__side--desktop-hidden) + .carousel.controls .carousel__wrapper {
@@ -325,29 +349,10 @@
   .testimonials__side:not(.testimonials__side--desktop-hidden) + .carousel {
     width: calc(100% - var(--title-max-width) + var(--horizontal-padding) + 8px);
   }
-}
 
-@media (min-width: 1273px) {
-  .testimonials .carousel__item:last-child .carousel__inner {
-    padding-right: 32px;
-  }
-
-  .testimonials__side + .carousel .carousel__item:last-child {
-    min-width: var(--slide-width);
-  }
-
-  .testimonials .testimonials__wrapper--wide .carousel__wrapper {
-    margin: 0 -32px;
-    width: calc(100% + 64px);
-    scroll-padding: 0 32px 0 0;
-  }
-
-  .testimonials .testimonials__wrapper--wide .carousel__inner {
-    padding: 0 0 0 32px;
-  }
-
-  .testimonials .testimonials__wrapper--wide .carousel__item:last-child {
-    min-width: calc(var(--slide-width) + 32px);
+  .testimonials__side:not(.testimonials__side--desktop-hidden) + .carousel:before,
+  .testimonials__side:not(.testimonials__side--desktop-hidden) + .carousel:after {
+    width: 62px;
   }
 }
 
