--- a/sections/product-page.liquid
+++ b/sections/product-page.liquid
@@ -1,23 +1,19 @@
 {{ "product-page.css" | asset_url | stylesheet_tag }}
-{{ "accordion.css" | asset_url | stylesheet_tag }}
 
 {%- assign title                 = product.name -%}
 {%- assign description           = product.description -%}
-{%- assign variation_label       = section.settings.variation_label -%}
-{%- assign message_label         = section.settings.message_label -%}
-{%- assign show_controls         = section.settings.show_controls -%}
-{%- assign show_thumbnails       = section.settings.show_thumbnails -%}
-{%- assign infinity_scroll       = section.settings.infinity_scroll -%}
+{%- assign price                 = product | product_price -%}
+{%- assign images                = product.images -%}
 {%- assign color_palette         = section.settings.color_palette -%}
+{%- assign show_breadcrumbs      = section.settings.show_breadcrumbs -%}
+{%- assign breadcrumbs_label     = section.settings.breadcrumbs_label -%}
+{%- assign breadcrumbs_url       = section.settings.breadcrumbs_url -%}
 {%- assign padding_top           = section.settings.padding_top -%}
 {%- assign padding_bottom        = section.settings.padding_bottom -%}
 {%- assign padding_top_mobile    = section.settings.padding_top_mobile -%}
 {%- assign padding_bottom_mobile = section.settings.padding_bottom_mobile -%}
-{%- assign show_breadcrumbs      = section.settings.show_breadcrumbs -%}
-{%- assign breadcrumbs_label     = section.settings.breadcrumbs_label -%}
-{%- assign breadcrumbs_url       = section.settings.breadcrumbs_url -%}
-{%- assign blocks                = section.blocks -%}
-{%- assign is_focal              = settings.use_focal_images -%}
+{%- assign message_label         = section.settings.message_label -%}
+{%- assign variation_label       = section.settings.variation_label -%}
 
 {%- assign label = "" -%}
 
@@ -93,12 +89,11 @@
   {%- endcase -%}
 {%- endcapture -%}
 
-{%- include 'variables-product-gallery' -%}
 {%- include 'variables-product-variations' -%}
 {%- include 'variables-product-quantity' -%}
 {% comment %} CSS variables end {% endcomment %}
 
-<div class="product-main__holder{% if color_palette != blank %} palette-{{ color_palette }}{%- endif -%}" style="{{- variables | escape -}}">
+<div class="product-main__holder palette-{{ color_palette }}" style="{{- variables | escape -}}">
   <div class="product-main__container container {% if padding_top != blank or padding_top_mobile != blank %} product-main__container--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} product-main__container--padding-bottom{%- endif -%}">
     {%- render 'breadcrumbs',
       product: product,
@@ -108,25 +103,26 @@
     -%}
 
     <div class="product-main__wrapper">
-      <div class="product-main__gallery"">
-        {{ product | product_gallery:
-          enable_thumbnails: show_thumbnails,
-          enable_controls: show_controls,
-          infinite_scroll: infinity_scroll
-        }}
-      </div>
+      <ul class="product-main__gallery">
+        {%- for image in images -%}
+          <li class="product-main__gallery-item">
+            {%- render 'image',
+                image: image,
+                loading: 'lazy',
+                class: 'product-main__gallery-image',
+                size: 'xl'
+            -%}
+          </li>
+        {%- endfor -%}
+      </ul>
 
       <div class="product-main__info">
           <h1 class="product-main__title">{{- title -}}</h1>
 
-          <div class="product-main__price">
-            {{- product | product_price -}}
-            <span class="product-main__price-separator">/</span>
-            {{- product | product_price_label -}}
-          </div>
+          <div class="product-main__price">{{- price -}}</div>
 
           {%- if description != blank -%}
-            <div class="product-main__description">
+            <div class="product-main__description bq-content rx-content">
               {{- description -}}
             </div>
           {%- endif -%}
@@ -242,24 +238,6 @@
       {
         "type": "header",
         "content": "Carousel settings"
-      },
-      {
-        "type": "checkbox",
-        "id": "show_controls",
-        "default": true,
-        "label": "Show navigation buttons"
-      },
-      {
-        "type": "checkbox",
-        "id": "show_thumbnails",
-        "default": true,
-        "label": "Show thumbnails"
-      },
-      {
-        "type": "checkbox",
-        "id": "infinity_scroll",
-        "default": true,
-        "label": "Infinity scroll"
       },
       {
         "type": "header",
