--- a/snippets/variables-product-quantity.liquid
+++ b/snippets/variables-product-quantity.liquid
@@ -6,7 +6,7 @@
     --add-button-button-width: 100%;
     --add-button-control-height: 50px;
     --add-button-gap: 16px;
-    --add-button-input-border-radius: var(--border-radius);
+    --add-button-input-border-radius: var(--border-radius-rounded);
     --add-button-input-padding: 8px 12px;
     --add-button-input-width: 110px;
     --add-button-label-weight: 700;
