--- a/snippets/variables-product-variations.liquid
+++ b/snippets/variables-product-variations.liquid
@@ -4,9 +4,9 @@
     --variation-select-font-size: 16px;
     --variation-select-padding: 0 40px 0 10px;
     --variation-select-control-height: 50px;
-    --variation-select-border-radius: var(--border-radius);
+    --variation-select-border-radius: var(--border-radius-rounded);
     --bundle-items-image-size: 50px;
-    --bundle-items-image-border-radius: var(--border-radius);
+    --bundle-items-image-border-radius: var(--border-radius-rounded);
     --bundle-items-cell-padding: 5px;
     --bundle-items-font-size: 15px;
 
