--- a/assets/title.css
+++ b/assets/title.css
@@ -1,5 +1,6 @@
 .title__wrapper {
   position: relative;
+  overflow: hidden;
 }
 
 .title__wrapper--padding-top {
@@ -14,13 +15,18 @@
   padding-bottom: var(--padding-bottom-mobile, 0);
 }
 
-.title__container {
+.title__wrapper .title__container {
   position: relative;
   z-index: 1;
 }
 
 .title__container .title__wrapper {
   border-radius: var(--border-radius-rounded-blocks);
+}
+
+.title__container .title__wrapper .title__content {
+  position: relative;
+  z-index: 1;
 }
 
 .title__content {
@@ -37,13 +43,6 @@
   padding-top: 25px;
 }
 
-.title__background-wrapper {
-  position: absolute;
-  overflow: hidden;
-  width: 100%;
-  height: 100%;
-}
-
 .title__background-image {
   width: 100%;
   height: 100%;
@@ -57,15 +56,6 @@
   left: 50%;
   width: 100%;
   transform: translate(-50%, 0);
-  overflow: hidden;
-}
-
-.title__background:not(.title__background--full-width) .title__background-wrapper {
-  border-radius: var(--border-radius-rounded-blocks);
-}
-
-.title__background--full-width .title__background-wrapper {
-  width: 100%;
 }
 
 .palette-one.title__wrapper {
@@ -124,11 +114,5 @@
 
   .title__wrapper--padding-bottom {
     padding-bottom: var(--padding-bottom);
-  }
-}
-
-@media (min-width: 1200px) {
-  .title__background-wrapper {
-    width: calc(100% - var(--horizontal-padding) * 2);
   }
 }
